--- a/Sharpdown/packages.config
+++ b/Sharpdown/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonMark.NET" version="0.11.0" targetFramework="net452" />
-  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
-  <package id="FCTB" version="2.16.11.0" targetFramework="net452" />
-  <package id="Fody" version="1.28.3" targetFramework="net452" developmentDependency="true" />
+  <package id="CommonMark.NET" version="0.15.1" targetFramework="net48" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
+  <package id="FCTB" version="2.16.24" targetFramework="net48" />
+  <package id="Fody" version="6.3.0" targetFramework="net48" developmentDependency="true" />
 </packages>
